<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myName"
            type="com.example.android.aboutme.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingStart="@dimen/padding"
        android:paddingTop="@dimen/small_padding"
        android:paddingEnd="@dimen/padding"
        tools:ignore="UseCompoundDrawables">

        <ScrollView
            android:id="@+id/scroll_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/name_text"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{myName.name}"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/nickname_edit"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/what_is_your_nickname"
                    android:inputType="text|textPersonName|textImeMultiLine"
                    android:minHeight="48dp"
                    android:text="@string/what_is_your_nickname"
                    android:textAlignment="center"
                    android:textColor="#7A7A7A" />

                <TextView
                    android:id="@+id/nickname_text"
                    style="@style/NameStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{myName.nickname}"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/done_button"
                    style="@android:style/Widget.DeviceDefault.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/roboto"
                    android:text="@string/done_button" />

                <ImageView
                    android:id="@+id/star_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:contentDescription="@string/yellow_star"
                    android:src="@android:drawable/btn_star_big_on"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/ivan_img"
                    android:layout_width="match_parent"
                    android:layout_height="253dp"
                    app:srcCompat="@drawable/ivan"
                    tools:ignore="image" />

                <TextView
                    android:id="@+id/ivan_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_van" />

                <ImageView
                    android:id="@+id/jes_img"
                    android:layout_width="match_parent"
                    android:layout_height="253dp"
                    app:srcCompat="@drawable/jesmund" />

                <TextView
                    android:id="@+id/jes_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_jes" />

                <ImageView
                    android:id="@+id/may_img"
                    android:layout_width="match_parent"
                    android:layout_height="253dp"
                    app:srcCompat="@drawable/mayeoh" />

                <TextView
                    android:id="@+id/may_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_may" />

                <ImageView
                    android:id="@+id/nic_img"
                    android:layout_width="match_parent"
                    android:layout_height="253dp"
                    app:srcCompat="@drawable/nicole" />

                <TextView
                    android:id="@+id/nic_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_nic" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="SpeakableTextPresentCheck,UselessLeaf">

                </ScrollView>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>